# context_sm

./: .clang-format  README.md  choose_as_root.bash  context_affinity_test2.cu  data.csv  data.csv.xlsx  data.xlsx  drawpic.py  duration.cu  kernel.cu  start_as_root.bash  test  test.py  testone.cu  util.cu
cuda/: CMakeLists.txt  getinfo.sh  run.sh
cuda/info/: add-line-cv.txt  line-c.txt  line-cv.txt  line-v.txt  line.txt
cuda/info/sass-ptx/: cu_ran_fork.txt  cu_ran_test-v.txt  cu_ran_test.txt  vector_add.txt
cuda/lib/: myutil.hpp  test.py  test.sh  tool.sh
cuda/lib/progress_bar/: progress_bar.sh  test_bar.sh
cuda/src/dissect/reference/: README.md  fine_grain_L2-cold_1GB.cu  fine_grain_L2_set.cu
cuda/src/dissect/reference/data/: L2_cache_data-1070-154918.csv  L2_cache_data-203327.csv  L2_cache_data-205927.csv  L2_cache_data-3060-16159.csv
cuda/src/dissect/reference/other/: Fermi.txt  Fermi.xlsx  Fermi_L1datacache_15KB-24KB-128bytestride.txt  Fermi_L1datacache_Mapping.xlsx  Fermi_L2TLB_mapping.xlsx  Kepler-LineMapping.xlsx  Kepler.txt  Kepler_L2_prefetch_4KB.txt  Maxwell.xlsx  Maxwell_L2TLB_mapping.xlsx  fermi-3080element-8stride.txt  fine_grain_Maxwell_texture_L1.cu  fine_grain_fermi_L1.cu  fine_grain_texture_L1.cu  fine_grain_texture_readonly.cu  global_BW.cu  pattern_demo_Fermi.xlsx  pattern_demo_Maxwell.xlsx  pattern_fermi.cu  shared_bankconflict.cu
cuda/src/dissect_page/: dissect.sh  dissect_page.cu  draw.py
cuda/src/dissect_page/data/: Dissect-inner412.csv  Dissect-inner462.csv  Dissect-inner476.csv  Dissect-inner480.csv  Dissect-inner512.csv  Dissect-inner544.csv  Dissect-inner562.csv  Dissect-inner576.csv  Dissect-inner612.csv  Dissect-inner626.csv  Dissect-inner676.csv
cuda/src/dissect_page/data-1070/: Dissect-inner1024.csv  Dissect-inner412.csv  Dissect-inner462.csv  Dissect-inner512.csv  Dissect-inner562.csv  Dissect-inner563.csv  Dissect-inner612.csv  Dissect-inner614.csv  Dissect-inner666.csv  Dissect-inner717.csv  Dissect-inner768.csv  Dissect-inner819.csv  Dissect-inner870.csv  Dissect-inner922.csv  Dissect-inner973.csv
cuda/src/dissect_page/data-3060/: Dissect-inner1037.csv  Dissect-inner1094.csv  Dissect-inner1152.csv  Dissect-inner476.csv  Dissect-inner512.csv  Dissect-inner526.csv  Dissect-inner576.csv  Dissect-inner626.csv  Dissect-inner634.csv  Dissect-inner676.csv  Dissect-inner691.csv  Dissect-inner726.csv  Dissect-inner749.csv  Dissect-inner776.csv  Dissect-inner806.csv  Dissect-inner826.csv  Dissect-inner864.csv  Dissect-inner922.csv  Dissect-inner926.csv  Dissect-inner979.csv
cuda/src/filedir/: dir.c  dir.cu
cuda/src/lib/: myutil.hpp  util.cuh
cuda/src/memory/: draw.py  random.cu  run.sh
cuda/src/memory-fork/: draw.py  random-fork.cu  数据处理.xlsx
cuda/src/memory-fork/output/: 2-Ran5000-inner12-191025.csv  2-Ran5000-inner2-210052.csv  2-Ran8000-inner4-181339.csv  2-Xeon-Ran5000-inner12-192117.csv  2-Xeon-Ran5000-inner2-210009.csv  Ran060138.csv  Ran3000-121552.csv  Ran5000-092126.csv  Ran5000-100200.csv  Ran5000-112344.csv
cuda/src/memory-test/: memory-test.cu
cuda/src/memory/output/: Random1-03122.csv  Random1-41621.csv  Random2-31724.csv  Random3-04310.csv  Random3-55616.csv
cuda/src/util/: util.cu
cuda/src/vector-add/: add.cu
cuda/src/voronoi/: voronoi-2.cu  voronoi-sm.cu  voronoi.cu
dissect/reference/: README.md  fine_grain_L2-cold_1GB.cu  fine_grain_L2-cold_4KB.cu
outdata/: outdata-s4262-b17.xlsx  outdata-s4462-b16.xlsx  outdata-s4462-b8.xlsx  outdata-s6224-b8.csv  outdata-s6224-b8.xlsx  outdata-s6242-b8.xlsx  outdata-s6244-b17.xlsx  outdata-s6244-b8.xlsx  share-outdata-k4-s2812142-b6.csv  share-outdata-k4-s6424-b6.csv  share-outdata-s16121412-b6.xlsx  share-outdata-s6242-b9.csv  share-outdata-s6242-b9.xlsx  sleep-outdata-k4-s2812142-b16.csv  sleep-outdata-k4-s6424-b16.csv
pic/Icon/: winpng
(+15 files in other folders)
